[package]
authors = ["James Waples <james@wapl.es>"]
categories = ["embedded", "no-std"]
description = "I2C/SPI driver for the SSD1331 OLED display controller"
documentation = "https://docs.rs/ssd1331"
exclude = [".travis.yml", ".gitignore"]
keywords = ["no-std", "ssd1331", "oled", "embedded", "embedded-hal-driver"]
license = "MIT OR Apache-2.0"
name = "ssd1331"
readme = "README.md"
repository = "https://github.com/jamwaffles/ssd1331"
version = "0.2.2"
edition = "2018"

[package.metadata.docs.rs]
targets = [ "thumbv7m-none-eabi", "thumbv7em-none-eabihf" ]

[badges]
circle-ci = { repository = "jamwaffles/ssd1331", branch = "master" }

[dependencies]
embedded-hal = "0.2.3"

[dependencies.embedded-graphics]
optional = true
version = "0.6.0"

[dev-dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.11"
panic-semihosting = "0.5.3"

[dev-dependencies.tinybmp]
version = "0.2.2"
features = [ "graphics" ]

[dev-dependencies.stm32f1xx-hal]
version = "0.5.2"
features = [ "rt", "stm32f103" ]

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
